Bug 152486 - macOS: Dark Mode: Release notes button unreadable
Summary: macOS: Dark Mode: Release notes button unreadable
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha1+
Hardware: All macOS (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2 tar...
Keywords:
: 153416 (view as bug list)
Depends on:
Blocks: macOS-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-12-12 14:34 UTC by steve
Modified: 2023-03-14 19:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
release notes button unreadable in dark mode (27.03 KB, image/png)
2022-12-12 14:35 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2022-12-12 14:34:46 UTC
Description:
Release notes button unreadable.

Steps to Reproduce:
When seeing the info message about 7.6 release notes, the button to visit the release notes is unreadable in dark mode on macOS with Application colors set to dark.

Actual Results:
see screenshot: unreadable button

Expected Results:
Readable button with correct colors.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 01c9c971e43782800ebf63acc763a7e7fba096c1
CPU threads: 8; OS: Mac OS X 13.0.1; UI render: Skia/Raster; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 steve 2022-12-12 14:35:00 UTC
Created attachment 184114 [details]
release notes button unreadable in dark mode
Comment 2 Sierk Bornemann 2022-12-13 14:12:46 UTC
I can confirm the issue in question.

Version: 7.6.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: 4bcf6d9c905e7b5558ee8d9f7f616ce61eadb8f8
CPU threads: 10; OS: Mac OS X 13.0.1; UI render: Skia/Metal; VCL: osx
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded
Comment 3 Caolán McNamara 2022-12-13 16:20:15 UTC
The dark mode macOS buttons are semi transparent, while none of the other platforms are, so the text color is inappropriate
Comment 4 Commit Notification 2022-12-14 08:54:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cbb3f697245d7d57439cb5019e9f9834cb9cd35f

tdf#152486 unreadable infobar buttons in macOS dark mode

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-12-14 08:54:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/013ad7ef72c487d3c26630a0195b2e290ce96047

tdf#152486 unreadable infobar buttons in macOS dark mode

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2022-12-14 09:05:50 UTC
a bit of a bodge, but it should at least work
Comment 7 steve 2022-12-15 11:48:53 UTC
Unsure how to trigger that release notes bar to verify. Thanks for handling this so quickly.
Comment 8 Caolán McNamara 2022-12-15 12:18:00 UTC
You get a very similar infobar if you open a read-only file (chmod -w somefile.odt) FWIW
Comment 9 steve 2022-12-19 13:13:45 UTC
Opened a read-only file but no bar with button appeared.
Comment 10 Commit Notification 2023-02-08 19:27:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/102e15d6f3960b0ea357b89243b6fe85df34bfec

Related: tdf#152486 infobar is white text on light button in light mode

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-02-09 06:15:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/694743ccc19c39dc64fed4acce6a61dd0efc6a08

Related: tdf#152486 infobar is white text on light button in light mode

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 steve 2023-03-14 19:11:06 UTC
*** Bug 153416 has been marked as a duplicate of this bug. ***