tdf#152486 unreadable infobar buttons in macOS dark mode

These are the buttons in infobars where the infobar has a custom
background color and on these platforms the buttons blend with their
background. On other platforms the buttons typically are opaque
and the issue doesn't arise.

Change-Id: Idfc4bbf291953bbf27e73cd5dd7654fd1ce4b051
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144104
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>